--- a/css/styles.css
+++ b/css/styles.css
@@ -1,31 +1,27 @@
 :root {
-   --blue: #4d5ae5;
-   --white: #f4f4fd;
-   --grey: #FFFFFF;
-    --cloud: #f4f4fd;
+  --blue: #4d5ae5;
+  --white: #f4f4fd;
+  --grey: #ffffff;
+  --cloud: #f4f4fd;
 }
 
-
-
-
-
 body {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    color: #434455;
-    line-height: 1,5;
-    background-color: #fff;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: #434455;
+  line-height: 1, 5;
+  background-color: #fff;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 
 h1,
@@ -33,542 +29,502 @@ h2,
 h3,
 h4,
 p {
-   margin: 0;
+  margin: 0;
 }
 
 img {
-   display: block;
+  display: block;
 }
 
 .header {
-    border-bottom: 1px solid #e7e9fc;
-    background-color: #fff;
-    padding: 24px 0;
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 1px 6px rgba(46, 47, 66, 0.08);
+  border-bottom: 1px solid #e7e9fc;
+  background-color: #fff;
+  padding: 24px 0;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
-    display: flex;
-    
+  display: flex;
 }
 
 .container {
-    max-width: 1158px;
-    padding: 0 15px; 
-    margin: 0 auto;
-    justify-content: space-between;
-    align-items: center;
+  max-width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
-
 .menu {
-    display: flex;
-    gap: 40px;
-    list-style-type: none;
+  display: flex;
+  gap: 40px;
+  list-style-type: none;
 }
 
 .menu-item {
-    color: #2e2f42;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #2e2f42;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .current {
-
 }
 
 .current::after {
-    width: 100%;
-    height: 4px;
-    background-color: #404bbf;
-    content: "";
-    display: block;
-    position: absolute;
-    top: 2.8rem;
-    border-radius: 2px;
-    bottom: -1px;
-
+  width: 100%;
+  height: 4px;
+  background-color: #404bbf;
+  content: "";
+  display: block;
+  position: absolute;
+  top: 2.8rem;
+  border-radius: 2px;
+  bottom: -1px;
 }
 
 .logo-web {
-   font-family: "Raleway", sans-serif;
-   font-size: 18px;
-   font-weight: 700;
-   color: #4D5AE5;
-   text-transform: uppercase;
-   line-height: 1.17;
-   letter-spacing: 0.03em;
-   margin-right: 76px;
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  color: #4d5ae5;
+  text-transform: uppercase;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  margin-right: 76px;
 }
 
 .logo-studio {
-    font-family: "Raleway", sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    color: #2E2F42;
-    text-transform: uppercase;
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  color: #2e2f42;
+  text-transform: uppercase;
 }
 
 .menu-link {
-    font-size: 16px;
-    font-weight: 500;
-    color: #2E2F42;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    position: relative;
-    display: inline-block;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-size: 16px;
+  font-weight: 500;
+  color: #2e2f42;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  position: relative;
+  display: inline-block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-link:hover,
 .menu-link:focus {
-    color: #404BBF;
+  color: #404bbf;
 }
 
-
 .adress {
-    font-style: normal;
+  font-style: normal;
 }
 
 .contacts-list {
-    display: flex;
-    gap: 40px;
-    list-style-type: none;
+  display: flex;
+  gap: 40px;
+  list-style-type: none;
 }
 
 .contacts-info {
-    font-style: 16px;
-    font-weight: 400;
-    color: #434455;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-style: 16px;
+  font-weight: 400;
+  color: #434455;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-info:hover {
-    color: #404bbf;
+  color: #404bbf;
 }
 .contacts-info:focus {
-    color: #404bbf;
+  color: #404bbf;
 }
 
 .section {
-    padding-top: 120px;
-    padding-bottom: 120px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 /* Title and Button Section1 */
 .tit-a-but {
-    padding: 188px 0;
-    background-color: #2E2F42;
-    background-image: linear-gradient(
-        to bottom,
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-        ),
+  padding: 188px 0;
+  background-color: #2e2f42;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
     url(../images/office.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    max-width: 1440px;
-    background-position: center;
-    margin: 0 auto;
+  background-size: cover;
+  background-repeat: no-repeat;
+  max-width: 1440px;
+  background-position: center;
+  margin: 0 auto;
 }
 
 .title {
-    color: #FFFFFF;
-    font-size: 56px;
-    font-weight: 700;
-    line-height: 1.07;
-    letter-spacing: 0.02em;
-    text-align: center;
-    max-width: 496px;
-    margin: 0 auto;
+  color: #ffffff;
+  font-size: 56px;
+  font-weight: 700;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+  text-align: center;
+  max-width: 496px;
+  margin: 0 auto;
 }
 
 .btn {
-    font-family: "Roboto", sans-serif;
-    background-color: #4d5ae5;
-    font-size: 16px;
-    font-weight: 500;
-    color: #FFFFFF;
-    cursor: pointer;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    min-width: 169px;
-    height: 56px;
-    border: none;
-    border-radius: 4px;
-    display: block;
-    margin: 48px auto;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-family: "Roboto", sans-serif;
+  background-color: #4d5ae5;
+  font-size: 16px;
+  font-weight: 500;
+  color: #ffffff;
+  cursor: pointer;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  border-radius: 4px;
+  display: block;
+  margin: 48px auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn:hover {
-    background-color: #404BBF
+  background-color: #404bbf;
 }
 .btn:focus {
-    background-color: #404BBF
+  background-color: #404bbf;
 }
 
 /*  Description Section2 */
 .des-sec {
-    padding: 120px 0;
+  padding: 120px 0;
 }
 
 .visually-hidden {
-    color: #2E2F42;
-   font-size: 20px;
-   font-weight: 500;
-   line-height: 1.2;
-   letter-spacing: 0.02em;
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-  }
+  color: #2e2f42;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
 
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 
 .description-list {
-    display: flex;
-    gap: 24px;
-    list-style-type: none;
+  display: flex;
+  gap: 24px;
+  list-style-type: none;
 }
 
 .description-text {
-    width: calc((100% - 72px) / 4);
+  width: calc((100% - 72px) / 4);
 }
 
 .description-icons {
-    fill: ;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 112px;
-    background-color: #f4f4fd;
-    border-radius: 4px;
-    border: 1px solid #8e8f99;
-    margin-bottom: 8px;
-    
+  fill: ;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  margin-bottom: 8px;
 }
 
 .description-list-title {
-    color: #2E2F42;
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    margin-bottom: 8px;
+  color: #2e2f42;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 
-
 .ph-text {
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    color: #434455;
-    letter-spacing: 0.02em;
-    line-height: 1.5;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  color: #434455;
+  letter-spacing: 0.02em;
+  line-height: 1.5;
 }
 
 /* Team Photo Section3 */
 .team-photo {
-    padding: 120px 0;
-    background-color: #F4F4FD;
+  padding: 120px 0;
+  background-color: #f4f4fd;
 }
 
 .team-photo-title {
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: #2e2f42;
-    margin-bottom: 72px;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+  margin-bottom: 72px;
 }
 
 .team-list {
-    display: flex;
-    gap: 24px;
-    list-style-type: none;
+  display: flex;
+  gap: 24px;
+  list-style-type: none;
 }
-
-
-
 
 .name-container {
-    padding: 32px 0;
-    
+  padding: 32px 0;
 }
 
-
-
 .icons-list {
-    display: flex;
-    justify-content: center;
-    gap: 24px;
-    width: 232px;
-    height: 40px;
-    gap: 24px;
-    text-align: center;
-    margin: 8px 16px 32px 16px;
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  width: 232px;
+  height: 40px;
+  gap: 24px;
+  text-align: center;
+  margin: 8px 16px 32px 16px;
 }
 
 .icons-punkt {
-    width: 40px;
-    height: 40px;
-   
+  width: 40px;
+  height: 40px;
 }
 
 .icons-item {
-    width: 100%;
-    height: 100%;
-    background-color: var(--blue);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        ;
+  width: 100%;
+  height: 100%;
+  background-color: var(--blue);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icons-item:hover,
 .icons-item:focus {
-    background-color: #404bbf;
+  background-color: #404bbf;
 }
 
 .social {
-    background-color: var(--white);
-    fill: var(--cloud);
+  fill: var(--cloud);
 }
 
-
-
-
 .team-photo-list {
-    background-color: #FFFFFF;
-    width: calc((100% - 72px) / 4);
-    border-radius: 0px 0px 4px 4px;
-    transition: cubic-bezier(0.4, 0, 0.2, 1);
-    box-shadow:  1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
+  background-color: #ffffff;
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
+  transition: cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-photo-list:hover {
-    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-    background-color: #fff;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  background-color: #fff;
 }
 
 .name {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    text-align: center;
-    margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-align: center;
+  margin-bottom: 8px;
 }
 
 .proffesion {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-    text-align: center;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  text-align: center;
 }
 
 /* Section4 Portfolio */
 .portfolio {
-    padding-top: 120px; 
-    padding-bottom: 120px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
-
 .portfolio-title {
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: #2e2f42;
-    margin-bottom: 72px;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+  margin-bottom: 72px;
 }
 
 .portfolio-list {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 24px;
-    row-gap: 48px;
-    list-style-type: none;
-}    
-   
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+  list-style-type: none;
+}
+
 .portfolio-item {
-    width: calc((100% - 48px) / 3);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
-    transform: translateY(0%);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0%);
 }
 
 .portfolio-img {
-    position: relative;
-    overflow: hidden;
+  position: relative;
+  overflow: hidden;
 }
 
-
-    
-
-
 .par {
-    position: absolute;
-    top: 0;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--white);
-    padding: 40px 32px;
-    background-color: #4d5ae5;
-    width: 100%;
-    height: 100%;
-    transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: absolute;
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--white);
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-img:hover .par {
-    transform: translateY(0);
+  transform: translateY(0);
 }
-
-
 
 .portfolio-container {
-    padding: 32px 16px;
-    border: 1px solid #e7e9fc;
-    border-top: none;
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
 
-
 .portfolio-text {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .portfolio-p {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-    
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
-
-
-
 
 /* Footer Info */
 .footer {
-    background: #2E2F42;
-    padding: 100px 0;
+  background: #2e2f42;
+  padding: 100px 0;
 }
 
 .dop-container {
-    display: flex;
-    align-items: baseline;
-    justify-content: flex-start;
+  display: flex;
+  align-items: baseline;
+  justify-content: flex-start;
 }
 
 .footer-info {
-    margin-right: 120px;
-    
+  margin-right: 120px;
 }
 
 .logo-web-f {
-    font-family: "Raleway", sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    color: #4D5AE5;
-    text-transform: uppercase;
-    letter-spacing: 0.03em;
-    line-height: 1.17;
-    margin-bottom: 16px;
-    display: inline-block;
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  color: #4d5ae5;
+  text-transform: uppercase;
+  letter-spacing: 0.03em;
+  line-height: 1.17;
+  margin-bottom: 16px;
+  display: inline-block;
 }
 
 .logo-studio-f {
-    font-family: "Raleway", sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    color: #f4f4fd;
-    text-transform: uppercase;
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  color: #f4f4fd;
+  text-transform: uppercase;
 }
 
 .footer-text {
-    color: #F4F4FD;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    max-width: 264px;
-    margin: 0;
+  color: #f4f4fd;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  max-width: 264px;
+  margin: 0;
 }
 
 .social-par {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--grey);
-    margin-bottom: 16px;   
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--grey);
+  margin-bottom: 16px;
 }
 
-
 .footer-icons-list {
-    display: flex;
-    gap: 16px;
+  display: flex;
+  gap: 16px;
 }
 
 .footer-icons-punkt {
-    width: 40px;
-    height: 40px;
+  width: 40px;
+  height: 40px;
 }
 
 .footer-icons-item {
-    width: 100%;
-    height: 100%;
-    background-color: var(--blue);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100%;
+  height: 100%;
+  background-color: var(--blue);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icons-item:hover,
 .footer-icons-item:focus {
-    background-color: #31d0aa;
+  background-color: #31d0aa;
 }
 
 .footer-social {
-    fill: #f4f4fd;
-    background-color: var(--white);
+  fill: #f4f4fd;
 }
-
-
-  
