--- a/css/styles.css
+++ b/css/styles.css
@@ -615,9 +615,11 @@ textarea {
   height: 100%;
   z-index: 999;
   background-color: rgba(46, 47, 66, 0.4);
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   /* opacity: 0;
   pointer-events: none;
   transition: opacity 250ms ease-in-out; */
@@ -633,37 +635,54 @@ textarea {
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background-color: #fcfcfc;
   border-radius: 4px;
-  max-width: 408px;
-  height: 80%;
-  position: relative;
+  width: 408px;
+  min-height: 584px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 72px 24px 24px 24px;
 }
 
 .modal-button {
   position: absolute;
   top: 24px;
   right: 24px;
+  width: 24px;
+  height: 24px;
   cursor: pointer;
-  border-radius: 100%;
+  border-radius: 50%;
   background-color: #e7e9fc;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
-  background: #fcfcfc;
-  border: none;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-button:hover {
+.modal-button:hover,
+.modal-button:focus {
   background-color: #404bbf;
+  border: none;
 }
 
 .modal-button:hover .modal-button-close {
   fill: #fff;
 }
 
+.modal-button:focus .modal-button-close {
+  fill: #ffffff;
+}
+
 .modal-button-close {
   fill: #2e2f42;
   margin-bottom: 2px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-par {
@@ -673,7 +692,8 @@ textarea {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
-  padding: 72px 24px 16px 24px;
+  /* padding: 72px 24px 16px 24px; */
+  margin-bottom: 16px;
 }
 
 .form {
@@ -688,9 +708,10 @@ textarea {
 }
 
 .form-container {
-  display: flex;
+  position: relative;
   max-width: 360px;
   height: 58px;
+  margin-bottom: 8px;
 }
 
 .form-container-input {
@@ -700,30 +721,33 @@ textarea {
 }
 
 .form-label {
+  display: block;
+  margin-bottom: 4px;
   font-weight: 400;
   font-size: 12px;
   line-height: 117%;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  display: flex;
+
   flex-direction: column;
 }
 
 .form-input {
-  border-color: 1px solid rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
-  width: 360px;
+  background-color: transparent;
+  width: 100%;
   height: 40px;
-  margin-top: 4px;
-
-  transition: all;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input: {
+.form-input:focus {
   border-color: #4d5ae5;
 }
 
-.form-input:active .form-icon {
+.form-input:focus .form-icon {
   fill: #4d5ae5;
 }
 
@@ -737,14 +761,11 @@ textarea {
 }
 
 .form-check {
-  /* padding: 14px; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 14px;
+  margin-bottom: 24px;
 }
 
 .check {
+  visually-hidden
   width: 16px;
   height: 16px;
 }
@@ -788,8 +809,10 @@ textarea {
 
 .form-icon {
   position: absolute;
-  top: 16px;
+  top: 50%;
   left: 16px;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .but-send {
@@ -800,12 +823,14 @@ textarea {
 }
 
 .form-button {
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  display: block;
+
   background-color: #4d5ae5;
   border-radius: 4px;
   padding: 16px 32px;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
+  border: none;
 
   font-weight: 500;
   font-size: 16px;
@@ -814,4 +839,5 @@ textarea {
   text-align: center;
   color: #fff;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
