--- a/css/styles.css
+++ b/css/styles.css
@@ -716,11 +716,9 @@ textarea {
   margin-bottom: 8px;
 }
 
-/* .form-container-input {
-  display: flex;
+.form-container-input {
   position: relative;
-  padding: 0px;
-} */
+}
 
 .form-label {
   display: block;
@@ -749,6 +747,14 @@ textarea {
   border-color: #4d5ae5;
 }
 
+.form-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .form-input:focus .form-icon {
   fill: #4d5ae5;
 }
@@ -765,6 +771,7 @@ textarea {
   font-size: 12px;
   line-height: 117%;
   letter-spacing: 0.04em;
+  border: 1px solid rgba(46, 47, 66, 0.4);
   color: rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   background-color: transparent;
@@ -782,7 +789,7 @@ textarea {
   margin-bottom: 24px;
 }
 
-.input-checkbox:checked .symbol-check {
+.input-checkbox:checked .privacy-check {
   background-color: var(--sky);
   border: none;
   fill: var(--white);
@@ -818,14 +825,6 @@ textarea {
   text-decoration: underline;
   text-decoration-skip-ink: none;
   color: var(--blue);
-}
-
-.form-icon {
-  position: absolute;
-  top: 50%;
-  left: 16px;
-  transform: translateY(-50%);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-button {
