--- a/css/styles.css
+++ b/css/styles.css
@@ -546,13 +546,16 @@ textarea {
 }
 
 .footer-form {
-  position: relative;
+  display: flex;
+  gap: 24px;
+  /* position: relative;
   width: 100%;
   height: 100%;
-  padding-top: 40px;
+  padding-top: 40px; */
 }
 
 .footer-form-par {
+  margin-bottom: 16px;
   position: absolute;
   top: 0px;
   left: 0px;
@@ -564,8 +567,8 @@ textarea {
 }
 
 .footer-input {
-  margin-right: 24px;
   border: 1px solid #fff;
+  background-color: transparent;
   border-radius: 4px;
   width: 264px;
   height: 40px;
@@ -576,20 +579,23 @@ textarea {
   line-height: 200%;
   letter-spacing: 0.04em;
   color: #fff;
-  padding: 8px 212px 8px 16px;
+  padding-left: 16px;
+}
+
+.footer-input::placeholder {
+  color: #ffffff;
 }
 
 .footer-form-but {
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 4px;
-  padding: 0px;
-  width: 185px;
+  min-width: 165px;
   height: 40px;
   border: none;
 
-  background: #4d5ae5;
+  background-color: #4d5ae5;
 
   font-weight: 500;
   font-size: 16px;
@@ -597,9 +603,6 @@ textarea {
   letter-spacing: 0.04em;
   color: #fff;
   cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .but-fly-icon {
@@ -617,20 +620,17 @@ textarea {
   height: 100%;
   z-index: 999;
   background-color: rgba(46, 47, 66, 0.4);
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* opacity: 0;
+  opacity: 0;
   pointer-events: none;
-  transition: opacity 250ms ease-in-out; */
+  transition: opacity 250ms ease-in-out;
 }
 
-/* .modal-overlay.is-open {
+.modal-overlay.is-open {
   opacity: 1;
   pointer-events: auto;
-} */
+}
 
 .modal {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
@@ -694,7 +694,6 @@ textarea {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
-  /* padding: 72px 24px 16px 24px; */
   margin-bottom: 16px;
 }
 
