--- a/css/styles.css
+++ b/css/styles.css
@@ -537,10 +537,6 @@ textarea {
 
 .footer-form-container {
   margin-left: 80px;
-  width: 472px;
-  height: 80px;
-  padding: 0px;
-  border: none;
 }
 
 .footer-form {
@@ -616,14 +612,14 @@ textarea {
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  opacity: 0;
-  pointer-events: none;
+  /* opacity: 0;
+  pointer-events: none; */
 }
 
-.modal-overlay.is-open {
+/* .modal-overlay.is-open {
   opacity: 1;
   pointer-events: auto;
-}
+} */
 
 .modal {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
@@ -691,14 +687,7 @@ textarea {
 }
 
 .form {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: 8px;
-  padding: 0px;
-  border: none;
   max-width: 360px;
-  margin: 0 auto;
 }
 
 .form-container {
@@ -826,7 +815,7 @@ textarea {
 
 .form-button {
   display: block;
-
+  margin: 0 auto;
   background-color: #4d5ae5;
   border-radius: 4px;
   padding: 16px 32px;
