--- a/css/styles.css
+++ b/css/styles.css
@@ -57,10 +57,12 @@ textarea {
 
 .container {
   max-width: 1158px;
+  min-width: 320px;
   padding: 0 15px;
   margin: 0 auto;
   justify-content: space-between;
   align-items: center;
+  overflow-x: hidden;
 }
 
 .nav {
@@ -612,14 +614,14 @@ textarea {
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* opacity: 0;
-  pointer-events: none; */
+  opacity: 0;
+  pointer-events: none;
 }
 
-/* .modal-overlay.is-open {
+.modal-overlay.is-open {
   opacity: 1;
   pointer-events: auto;
-} */
+}
 
 .modal {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
